<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberOfQuestionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/NumberOfQuestions"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numberOfQuestionsEditText"
        android:layout_width="262dp"
        android:layout_height="51dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/numberOfQuestionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/numberOfQuestionsTextView"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ErrorMessage"
        android:textColor="@color/colorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/numberOfQuestionsEditText"
        app:layout_constraintTop_toBottomOf="@+id/numberOfQuestionsEditText" />

    <Button
        android:id="@+id/downloadQuestionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DownloadQuestions"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberOfQuestionsEditText"
        app:layout_constraintTop_toTopOf="@+id/numberOfQuestionsEditText" />

    <TextView
        android:id="@+id/questionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/QuestionsLabel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessageTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questionsListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionsTextView"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/loadingQuestionsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

</androidx.constraintlayout.widget.ConstraintLayout>